--- a/src/containers/ModalWindow/style.css
+++ b/src/containers/ModalWindow/style.css
@@ -7,15 +7,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(63,114,175, 0.3);
+    background-color: rgba(63,114,175, 0.4);
     z-index: 100;
 }
 
 .modal__content {
-    max-width: 380px;
+    max-width: 800px;
+    width: 100%;
     background-color: #DBE2EF;
     padding: 32px 24px 24px 24px;
     position: absolute;
+    border-radius: 4px;
 }
 
 .modal__text {
