--- a/src/containers/Task/style.css
+++ b/src/containers/Task/style.css
@@ -8,13 +8,32 @@
     justify-content: space-between;
 }
 
-.task__header-title {
+.task__title {
+    margin-bottom: 12px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.task__title-taskName {
     font-weight: 500;
     line-height: 20px;
-    text-align: left;
     color: black;
-    margin-bottom: 12px;
 }
+
+.task__title-categoryName {
+    color: #3F72AF;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.task__title-categoryName::before {
+    content: url('../../images/icons/folderIcon.svg');
+    width: 24px;
+    height: 18px;
+}
+
 .task__description {
     line-height: 20px;
 }
